--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.556.0",
@@ -47,6 +48,7 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
